--- a/src/os2datascanner/projects/static/scss/components/_forms.scss
+++ b/src/os2datascanner/projects/static/scss/components/_forms.scss
@@ -38,6 +38,11 @@
       .shrink {
         flex: 0 1 auto;
       }
+
+      .button { // temporary button styling until forms get their makeover
+        margin-left: 0.5rem;
+        padding: 0.75rem;
+      }
     }
   }
 
