--- a/src/os2datascanner/projects/static/scss/components/_organizations.scss
+++ b/src/os2datascanner/projects/static/scss/components/_organizations.scss
@@ -40,7 +40,7 @@
 
   .response-icon {
     display: flex;
-    margin: 0 .25rem .75rem 1rem;
+    margin: 0 .25rem .75rem 0;
     font-size: .8rem;
 
     &--error {
