--- a/src/os2datascanner/projects/static/scss/components/_tabs.scss
+++ b/src/os2datascanner/projects/static/scss/components/_tabs.scss
@@ -74,10 +74,10 @@
 
 .bubble {
   position: relative;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: bold;
   text-align: center;
-  padding: 2px 5px 2px 6px;
+  padding: 0.125rem 0.5rem 0.125rem 0.563rem;
   border-radius: 12px;
   color: white;
   background-color: var(--color-primary-light);
