--- a/src/os2datascanner/projects/static/scss/components/_options.scss
+++ b/src/os2datascanner/projects/static/scss/components/_options.scss
@@ -76,10 +76,9 @@ label+.dropdown {
 
 .handle-dropdown {
   position: relative;
-  width: 16rem;
   z-index: 100;
   top: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.5rem 0.625rem;
   border-radius: var(--border-radius-default);
   background-color: var(--color-widget-bg);
   box-shadow: var(--box-shadow-widget);
@@ -88,16 +87,20 @@ label+.dropdown {
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
-    width: 80%;
-    margin: 1rem auto;
-  }
+    margin: 1rem;
 
-  ul>li {
-    width: 100%;
-    text-align: center;
-    font-weight: normal;
+    li {
+      text-align: center;
+      font-weight: normal;
+      margin-left: 0 !important;
+      white-space: nowrap;
+    }
+
+    li:not(:last-child) {
+      margin-bottom: 0.5rem;
+    } 
   }
 
   &:hover,
@@ -197,7 +200,7 @@ label+.dropdown {
 .table-checkbox__action {
 
   &+.dropdown-container {
-    left: -1rem;
+    left: -0.5rem;
   }
 
   &:not(:disabled):hover+.dropdown-container {
