[#58736] Add review fixes

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/rules/regexrule_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/rules/regexrule_form.html
@@ -169,7 +169,7 @@
                 <div class="col-sm-offset-2 col-sm-10">
                   <button id="button-add-expression"
                           type="button"
-                          class="flex button button--grey button--grey--icon button--small">
+                          class="flex button button--icon-button">
                     <span class="items">
                       <span>
                         <i id="add"
