--- a/src/os2datascanner/projects/static/scss/components/_buttons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_buttons.scss
@@ -322,7 +322,7 @@
   }
 }
 
-.sorting-options {  
+.sorting-options {  // *****Used for the "filter" button in the report module 
   height: 2.69rem;
   width: 5rem;
   background-color: var(--color-white);
