--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -4,6 +4,11 @@
   margin-top: 0;
 }
 
+.match_filter_container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .match_filtering_wrapper {
   float: left;
   margin-top: 1rem;
@@ -40,6 +45,13 @@
   margin-right: 2rem;
   margin-top: 2rem;
   font-size: .9rem;
+
+  &.report_filter_toggle_button {
+    width: fit-content;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    font-size: .9rem;
+  }
 }
 
 .org_filtering {
@@ -84,7 +96,7 @@
 .checkbox_button {
   position: absolute;
   opacity: 0;
-  width: 15rem;
+  width: 100%;
   height: 100%;
   cursor: pointer;
   top: 1px;
@@ -96,6 +108,23 @@
     opacity: 0;
     position: absolute;
     z-index: -1;
+  }
+
+  label {
+    display: block;
+    min-width: 8rem;
+  }
+
+  &--report {
+    label {
+      width: 8;
+    }
+  }
+
+  &--org_unit {
+    label {
+      width: 18;
+    }
   }
 
   input+label {
