--- a/src/os2datascanner/projects/static/scss/components/_options.scss
+++ b/src/os2datascanner/projects/static/scss/components/_options.scss
@@ -115,11 +115,8 @@ label+.dropdown {
 }
 
 .filter-button {
-  height: 2.7rem;
-
   padding-left: 0.8rem;
   padding-right: 0.8rem;
-
   background-color: var(--color-white);
   border-width: 1px;
   border-style: solid;
@@ -129,6 +126,18 @@ label+.dropdown {
   font-weight: normal;
   font-size: 1rem;
   cursor: pointer;
+
+  &--report {
+    height: 2.563rem; 
+  }
+
+  &--org_unit {
+    height: 2.688rem;
+  }
+
+  &:hover {
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2)
+  }
 
   svg {
     top: 0.15rem;
@@ -149,7 +158,7 @@ label+.dropdown {
 
 .filter-container-options {
   position: relative;
-  width: 20rem;
+  width: fit-content;
   z-index: 100;
   padding: 0.5rem;
   border-radius: var(--border-radius-default);
@@ -172,6 +181,18 @@ label+.dropdown {
     width: 100%;
     text-align: center;
     font-weight: normal;
+  }
+
+  &--report {
+    label {
+      width: 8rem;
+    }
+  }
+  
+  &--org_unit {
+    label {
+      width: 18rem;
+    }
   }
 
   &:active {
