[#54367] Add optional GraphGrant support to ExchangeScanner
The UI for this is... not great, I'll grant you: some part of the
incomprehensible logic behind the Authentication model demands that you
give a dummy service account, even though it won't be used

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
@@ -194,7 +194,7 @@
               {% endif %}
 
               {% if form.grant %}
-                {% include "components/scanner/scanner_form_select_option_field.html" with field=form.grant required="True" %}
+                {% include "components/scanner/scanner_form_select_option_field.html" with field=form.grant %}
               {% endif %}
 
               {% if form.username %}
