--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         {% comment %} HTML is a programming language btw {% endcomment %}
-        {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail-account' and document_report.matches.handle|find_parent:type|find_file_folder %}
+        {% if document_report.last_opened_time or document_report.matches.handle|present_url or type != 'ews' and type != 'msgraph-mail' and document_report.matches.handle|find_parent:type|find_file_folder %}
           <div class="hit-link">
             <div class="button-group"
                  name='open-button'
@@ -41,7 +41,7 @@
                    target="_blank"
                    rel="noopener">{% trans "Open" %}</a>
               {% endif %}
-              {% if type != 'ews' and type != 'msgraph-mail-account' %}
+              {% if type != 'ews' and type != 'msgraph-mail' %}
                 {% if document_report.matches.handle|find_parent:type|find_file_folder %}
                   <a href="{{ document_report.matches.handle|find_parent:type|find_file_folder }}"
                      class="button button--text-button btn-{{ document_report.pk|unlocalize }}"
@@ -49,7 +49,7 @@
                      rel="noopener">{% trans "Open folder" %}</a>
                 {% endif %}
               {% endif %}
-              {% if show_delete_button and type == 'msgraph-mail-account' %}
+              {% if show_delete_button and type == 'msgraph-mail' %}
                 <span class="delete-mail">
                   <button class="button button--deletion"
                           id="{{ document_report.pk }}"
