[#59410] Add styling to delete button

--- a/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/reports/match.html
@@ -51,7 +51,7 @@
               {% endif %}
               {% if show_delete_button and type == 'msgraph-mail' %}
                 <span class="delete-mail">
-                  <button class="button button--deletion"
+                  <button class="button button--deletion-button"
                           id="{{ document_report.pk }}"
                           name='delete-mail'
                           title="{% trans 'Deletes email from your mailbox' %}"
