--- a/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
@@ -21,5 +21,5 @@
            class="form-control"
            maxlength="256" />
   </div>
-  <button class="button button--cta-button" type="submit">{% trans "Opret" %}</button>
+  <button class="button button--cta-button" type="submit">{% trans "Create" %}</button>
 </form>
