[#59573] Rework the CoveredAccount relation
Multiple CoveredAccounts can now exist for a given Scanner, as long as
each one is related to a different ScanStatus. This has some surprisingly
broad consequences! In particular, the Scanner.covered_accounts relation
has gone, as the question "is this Account covered by this Scanner?" is
no longer meaningful: an Account might have been covered at time t, not
covered at time t+1, and covered again at time t+2

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_cleanup_stale_accounts.html
@@ -23,7 +23,7 @@
       <p>{% trans "Delete the report results for the following users:" %}</p>
       <form id="cleanup-accounts-form" name="cleanup-accounts-form">
         <ul>
-          {% for account in scanner.get_stale_accounts %}
+          {% for account in scanner.compute_stale_accounts %}
             <li>
               <input type="checkbox"
                      name="cleanup_account_uuid"
