--- a/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/components/modals/alias_create.html
@@ -1,9 +1,12 @@
 {% load i18n %}
 
 <form class="form"
-      action="{% url "create-alias" organization.slug account.uuid %}"
+      action="{% url 'create-alias' organization.slug account.uuid %}"
       method="post">
   {% csrf_token %}
+  <div class="modal__form__title">
+    <h2>{% trans "Create a new alias for" %} {{ account.first_name }}</h2>
+  </div>
   <div id="id__alias_type_container" class="dropdown__group form__group">
     <label class="required-form" for="id__alias_type">{% trans "Alias type" %}</label>
     <div class="dropdown">
@@ -21,5 +24,7 @@
            class="form-control"
            maxlength="256" />
   </div>
-  <button class="button button--cta-button" type="submit">{% trans "Create" %}</button>
+  <div class="modal__form__actions">
+    <button class="button button--cta-button" type="submit">{% trans "Create" %}</button>
+  </div>
 </form>
