--- a/src/os2datascanner/projects/report/reportapp/templates/mail/password_reset_email.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/mail/password_reset_email.html
@@ -16,7 +16,7 @@
 
   {% trans "Thanks for using our site!" %}
 
-  {% blocktrans %}
+  {% blocktrans trimmed %}
   The {{ site_name }} team
   {% endblocktrans %}
 
