[#59595] Update styling after review

--- a/src/os2datascanner/projects/static/scss/components/_buttons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_buttons.scss
@@ -85,6 +85,10 @@
         height: 1rem !important;
       }
     }
+
+    &.button--modal-ui { // Only applies when both classes are added
+      border-radius: var(--border-radius-button) !important;
+    }
   }
 
   &--outline-button  { // ***** "Secondary" button type *****
