--- a/src/os2datascanner/projects/static/scss/components/_forms.scss
+++ b/src/os2datascanner/projects/static/scss/components/_forms.scss
@@ -67,7 +67,7 @@
 
   label+input,
   label+.input-group {
-    margin-top: 0.25rem;
+    margin-top: 0.5rem;
   }
 
   input+label,
@@ -87,7 +87,8 @@
 
   // input [type=text],[type=password]
   input[type=text],
-  input[type=password] {
+  input[type=password], 
+  input[type=email] {
     background-color: #fff;
     border: none;
     border-radius: var(--border-radius-small);
@@ -101,7 +102,8 @@
   }
 
   input[type=text]:focus,
-  input[type=password]:focus {
+  input[type=password]:focus,
+  input[type=email]:focus {
     box-shadow: inset 0 0 0 4px #5ca4cd40;
   }
 
