[#59640] Burn down all of the complicated cron datetime.time logic
datetime.times don't support the concept of "hour 24" (i.e., the next
midnight seen from the perspective of today), which has made our life
unnecessarily difficult. But you know what /can/ deal with that concept?
That's right, our old friend datetime.datetime

--- a/src/os2datascanner/projects/admin/adminapp/templates/scanners.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/scanners.html
@@ -140,11 +140,11 @@
                     {% endif %}
                   </td>
 
-                  {% if scanner.schedule_time %}
+                  {% if scanner.schedule_datetime %}
                     <td class="scanner-runtime datatable__column--automatic">
                       {% trans "Next scan: " %}
                       <br />
-                      {{ scanner.schedule_date|naturalday:"l j. F Y"|capfirst }}, {{ scanner.schedule_time }}
+                      <span title="{{ scanner.schedule_datetime }}">{{ scanner.schedule_datetime|naturaltime }}</span>
                     </td>
                   {% else %}
                     <td class="scanner-runtime datatable__column--automatic">{% trans "No" %}</td>
