[#59711] Cleaning up base scanner askrun and run views + webscanner views

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_ask_run.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_ask_run.html
@@ -16,7 +16,6 @@
   <div class="runner-container">
     {% if ok %}
 
-
       <div class="runner-content">
         <span class="icon">{% include "components/svg-icons/scan_run.svg" %}</span>
 
@@ -25,41 +24,9 @@
         <h3>{% trans "Are you sure you want to start the scanner?" %}</h3>
 
         <p>
-          {% if webscanner.pk %}
-            <a href="/webscanners/{{ webscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif filescanner.pk %}
-            <a href="/filescanners/{{ filescanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif exchangescanner.pk %}
-            <a href="/exchangescanners/{{ exchangescanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif dropboxscanner.pk %}
-            <a href="/dropboxscanners/{{ dropboxscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif msgraphmailscanner.pk %}
-            <a href="/msgraph-mailscanners/{{ msgraphmailscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif msgraphfilescanner.pk %}
-            <a href="/msgraph-filescanners/{{ msgraphfilescanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif msgraphcalendarscanner.pk %}
-            <a href="/msgraph-calendarscanners/{{ msgraphcalendarscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif msgraphteamsfilescanner.pk %}
-            <a href="/msgraph-teams-filescanners/{{ msgraphteamsfilescanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif googledrivescanner.pk %}
-            <a href="/googledrivescanners/{{ googledrivescanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif gmailscanner.pk %}
-            <a href="/gmailscanners/{{ gmailscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% elif sbsysscanner.pk %}
-            <a href="/sbsysscanners/{{ sbsysscanner.pk }}/run/"
-               class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
-          {% endif %}
-
+          <a href="{{ run_redirect }}"
+             class="button button--cta-button run-scan-button">{% trans "Let's go!" %}</a>
+ 
           {#     Setting style=".." here is not best practice, but we want to still have the styling from #}
           {#      assigned classes when element is shown. Hidden will not work because display is set in css #}
           <a id="waiting-scanner-run-btn"
